create nav, create div, begin style

--- a/style.css
+++ b/style.css
@@ -1,5 +1,83 @@
 body {
   margin: 0;
   box-sizing: border-box;
+  background-color: wheat;
+  height: 100vh;
+
+  display: grid;
+  grid-template-columns: 2fr 1fr 10fr 1fr 2fr;
+  grid-template-rows: 50px 10fr 5fr 10fr 1fr 2fr 1fr 2fr;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   background-color: yellow;
+  height: 50px;
+  grid-column: span 3;
+}
+
+nav div {
+  font: 20px;
+  margin: 10px 10px 10px 10px;
+  color: black;
+}
+
+section {
+  display: flex;
+}
+
+nav {
+  grid-column: span 5;
+}
+
+main {
+  display: grid;
+}
+
+#A {
+  background-color: white;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+#B {
+  background-color: black;
+  color: white;
+  grid-column: 2 / 3;
+}
+
+#C {
+  background-color: red;
+  grid-column: 3 / 5;
+  grid-row: 1 / 3;
+}
+
+#D {
+  background-color: black;
+  color: white;
+  grid-column: 1 / 2;
+  grid-row: 4 / 5;
+}
+
+#F {
+  background-color: black;
+  color: white;
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+
+#G {
+  background-color: white;
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+}
+
+#H {
+  background-color: black;
+  color: white;
+  grid-column: 3 / 4;
+  grid-row: 4 / 5;
 }
