--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   background-color: black;
-  height: 50px;
+  height: 8vh;
   grid-column: span 3;
 }
 
@@ -34,6 +34,7 @@ main {
   display: grid;
   grid-template-columns: 5fr 0.5fr 15fr 0.5fr 2fr;
   grid-template-rows: 15fr 2fr 15fr 1fr 5fr 2fr 5fr;
+  height: 92vh;
 }
 
 #A {
