underline nav bar copy

--- a/style.css
+++ b/style.css
@@ -17,13 +17,22 @@ nav {
 
 nav div {
   font: 20px;
-  margin: 10px 10px 10px 10px;
   color: white;
-  text-decoration-color: white;
+}
+
+a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  border-bottom: 2px solid white;
+  margin: 0 5px;
+  height: 15px;
+  width: fit-content;
 }
 
 section {
   display: flex;
+  width: max-content;
 }
 
 nav {
